# learn

./: .gitconfig  .gitignore  CMakeLists.txt  README.md
advent2023/: ad01.h  main.cpp
analysis/include/: base_analysis.h  calc_mean.h  calc_sum.h  db_manger.h
analysis/src/: calc_mean.cpp  calc_sum.cpp  main.cpp
datastruct/: btree.h  main.cpp  vector.h
double/: main.cpp  spin_lock.h
fraction/: fraction.cpp  fraction.h  main.cpp
sqlite/: main.cpp  sqlite
three/: main.cpp
